2003-06-17 Tom Copeland  <tom@infoether.com>

	* www/project/stats_graph.php:
	Graphs occasionally had wrong dates along the xaxis; this
	was happening because the SQL statement had an offset 
	of 23 which wasn't working for months that don't have 30 
	days.  I think.
	
2003-06-13 Tom Copeland  <tom@infoether.com>

	* www/admin/index.php:
	Added a link to the "recent logins" page.
	
2003-06-13 Christian Bayle	<bayle@debian.org>

	* Added Patch #307 Ronald Petty cvs browser as an alternate cvs browser
	* Added Patch #317 Dracos Moinescu cvs browser as an alternate cvs browser
	* Applied Patch #389 Hidenari Miwa & Tsutomu Tominaga Email i18n patch
	this is a tricky patch, I hope won't break everything in mail sending
	rather untested
	* Applied Patch #388 Speed-ups to www/my/index.php thanks to Jeff Fynboh
	yet another trick patch.

2003-06-09  Roland Mas  <99.roland.mas@aist.enst.fr>

	* common/include/Group.class: Send a different project submission
	email to the submitter and the site admins.  Submitter was sent a
	link to approve-pending.php, which she could of course not use.
	Added entries to Base.tab and French.tab accordingly.

2003-05-30 Tom Copeland  <tom@infoether.com>

	* www/my/index.php:
	Fixed bug #381 - My Tracker Items grouping was messed up.
	
	* www/people/create.php,index.php:
	Fixed bug #382 - On the project admin page, "Post Jobs" and 
	"Edit Jobs" were missing headers

	* Various files in www/snippet/ and www/survey:
	Fixed bug #374 - There are several $language-> instead of $Language->.  
	Thanks to Vicente Ruiz for the pointers.

	* www/include/feature_boxes.php
	Fixed bug #373 - "Top Project Downloads" in feature_boxes should 
	not show deleted projects
	
2003-05-30 Roland Mas  <lolando@debian.org>

	* Changed the LDAP setup: we're now using an official OID space
	inside the Debian OID space.  Fixed attribute and objectclass
	names in the schema, and other files, accordingly.

2003-05-23 Tom Copeland <tom@infoether.com>
