@@ -42,7 +42,7 @@ $HTML->header(array('title'=>$Language->getText('user_home','title'),'pagename'=
 	<td><?php echo $Language->getText('user_home','email') ?>: </td>
 	<td>
 	<strong><a href="/sendmessage.php?touser=<?php print $user_id; 
-		?>"><?php print $user->getUnixName(); ?> at users.<?php print $GLOBALS['sys_default_domain']; ?></a></strong>
+		?>"><?php print $user->getUnixName(); ?> at <?php print $GLOBALS['sys_users_host']; ?></a></strong>
 	</td>
 </tr>
 <?php if ($user->getJabberAddress()) { ?>
@@ -165,8 +165,8 @@ if (session_loggedin()) {
 	<input type="hidden" name="touser" value="<?php echo $user_id; ?>" />
 
 	<strong><?php echo $Language->getText('user_home','email') ?>:</strong><br />
-	<strong><?php echo $u->getUnixName().'@'.$GLOBALS['sys_default_domain']; ?></strong>
-	<input type="hidden" name="email" value="<?php echo $u->getUnixName().'@'.$GLOBALS['sys_default_domain']; ?>" />
+	<strong><?php echo $u->getUnixName().'@'.$GLOBALS['sys_users_host']; ?></strong>
+	<input type="hidden" name="email" value="<?php echo $u->getUnixName().'@'.$GLOBALS['sys_users_host']; ?>" />
 	<p>
 	<strong><?php echo $Language->getText('user_home','name') ?>:</strong><br />
 	<strong><?php echo $u->getRealName(); ?></strong>
